<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.al.gridimagesearch.activities.SettingsFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.al.gridimagesearch.activities.SettingsFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Image_size"
            android:id="@+id/tvImageSize"
            android:layout_alignTop="@+id/spImageSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:width="70dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageSize"
            android:entries="@array/image_sizes_array"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/tvImageSize"
            android:layout_toEndOf="@+id/tvImageSize"
            android:paddingBottom="15dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spColorFilter"
            android:entries="@array/image_colors_array"
            android:layout_below="@+id/spImageSize"
            android:layout_alignLeft="@+id/spImageSize"
            android:layout_alignStart="@+id/spImageSize"
            android:layout_alignRight="@+id/spImageSize"
            android:layout_alignEnd="@+id/spImageSize"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvColorFilter"
            android:layout_alignTop="@+id/spColorFilter"
            android:layout_toLeftOf="@+id/spColorFilter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/Color_filter" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageType"
            android:entries="@array/image_types_array"
            android:layout_below="@+id/spColorFilter"
            android:layout_alignRight="@+id/spColorFilter"
            android:layout_alignEnd="@+id/spColorFilter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@+id/spColorFilter"
            android:layout_alignStart="@+id/spColorFilter"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Image_type"
            android:id="@+id/tvImageType"
            android:layout_alignTop="@+id/spImageType"
            android:layout_toLeftOf="@+id/spImageType"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:singleLine="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etSiteFilter"
            android:layout_alignRight="@+id/spImageType"
            android:layout_alignEnd="@+id/spImageType"
            android:hint="@string/EG_Imgur_com"
            android:layout_below="@+id/spImageType"
            android:layout_toEndOf="@+id/tvSiteFilter"
            android:layout_toRightOf="@+id/tvSiteFilter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Site_filter"
            android:id="@+id/tvSiteFilter"
            android:layout_alignTop="@+id/etSiteFilter"
            android:layout_alignLeft="@+id/tvImageType"
            android:layout_alignStart="@+id/tvImageType"
            android:width="70dp"
            android:paddingTop="10dp" />

    </RelativeLayout>

</FrameLayout>
